# TDD_detection4

./: CMakeLists.txt  FFT_TRANS.cpp  NRS_GEN.cpp  PSS_Extended.h  PSS_Normal.h  PSS_corr.cpp  RS_proc.cpp  SSS_B2_1024.txt  SSS_Normal.h  SSS_PROC.cpp  TDD_detection.cpp  create_mark.cpp  dmac.h  dmac.hpp  freq_shift.cpp  funk.cpp  header.h  logger.cpp  main.cpp  plis_configure.cpp  real1.txt  tch.h
signal/: SSS_array_B1.txt  SSS_array_B2.txt  SSS_array_B3.txt  SSS_array_B4.txt  SSS_array_B5.txt  SSS_array_B6.txt
